# pinky

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
include/: Errors.h  Errors.hpp  Lexer.h  Lexer.hpp  Model.h  Parser.h  Token.h  Utils.h
include/pinky/: Errors.h  Lexer.h  Model.h  Parser.h
src/: Lexer.cpp  Model.cpp  Parser.cpp  Token.cpp  Utils.cpp  main.cpp
tests/: LexerTest.cpp  ModelTest.cpp  ParserTest.cpp  TestFramework.h  TestMain.cpp
